Ajustes do registro de pets